syntax="proto3";

package auth_proto;

option go_package="./pkg/infrastructure/pb";

service AuthService{
    rpc GetUserDetailsLiteForPostView(RequestUserId) returns (ResponseUserDetailsLite);
}

message RequestUserId{
    string UserId=1;
}


message ResponseUserDetailsLite{
    string ErrorMessage=1;
    string UserName=2;
    string UserProfileImgURL=3;
}

